fix: table page alignment

--- a/src/pages/Providers/Providers.scss
+++ b/src/pages/Providers/Providers.scss
@@ -1,10 +1,12 @@
 .product-list-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: 100%;
+    margin: 0 25px;
 }
 
 .product-list-bottom {
-    margin-top: 7em;
+    margin-top: 3em;
     text-align: center;
 }
